--- a/theme/templates/base.html
+++ b/theme/templates/base.html
@@ -51,6 +51,7 @@ Free for personal and commercial use under the CCA 3.0 license (html5up.net/lice
         <link rel="stylesheet" href="{{ STATICURL }}/theme/css/style-desktop.css" />
     </noscript>
     
+    <link rel="stylesheet" href="{{ STATICURL }}/theme/fonts/font-awesome.min.css" />
     <link rel="stylesheet" href="{{ STATICURL }}/theme/css/pygment.css" />
     {% endblock head %}    
 </head>
