--- a/theme/templates/base.html
+++ b/theme/templates/base.html
@@ -51,7 +51,7 @@ Free for personal and commercial use under the CCA 3.0 license (html5up.net/lice
         <link rel="stylesheet" href="{{ STATICURL }}/theme/css/style-desktop.css" />
     </noscript>
     
-    <link rel="stylesheet" href="{{ STATICURL }}/theme/fonts/font-awesome.min.css" />
+    <link href="//netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
     <link rel="stylesheet" href="{{ STATICURL }}/theme/css/pygment.css" />
     {% endblock head %}    
 </head>
