Add Gittip link in sidebar

--- a/theme/templates/sidebar.html
+++ b/theme/templates/sidebar.html
@@ -51,7 +51,17 @@
                                                     {% endfor %}
                                                     </ul>
                                                 </section>
-                                            {% endif %}      
+                                            {% endif %}     
+                                            
+                                                <section class="is">
+                                                    <header>
+                                                        <h2>Donate</h2>
+                                                    </header>
+                                                <p>If you found this useful, please consider 
+                                                supporting the author <a href="https://www.gittip.com/mitzp/">via Gittip</a>.
+                                                </p>
+                                                </section>
+                                             
                                         </div>
                                     <!-- /Sidebar -->
                                     
