Add Gittip link in sidebar

--- a/theme/templates/sidebar.html
+++ b/theme/templates/sidebar.html
@@ -58,7 +58,7 @@
                                                         <h2>Donate</h2>
                                                     </header>
                                                 <p>If you found this useful, please consider 
-                                                supporting the author <a href="https://www.gittip.com/mitzp/">via Gittip</a>.
+                                                supporting the author <a href="https://www.gittip.com/mfitzp/">via Gittip</a>.
                                                 </p>
                                                 </section>
                                              
