Fix mobile menu?

--- a/theme/templates/base.html
+++ b/theme/templates/base.html
@@ -50,6 +50,9 @@ Free for personal and commercial use under the CCA 3.0 license (html5up.net/lice
     <script src="{{ STATICURL }}/theme/js/jquery.min.js"></script>
     <script src="{{ STATICURL }}/theme/js/jquery.dropotron.min.js"></script>
     <script src="{{ STATICURL }}/theme/js/config.js"></script>
+    <script src="js/jquery.min.js"></script>
+    <script src="js/jquery.dropotron.min.js"></script>
+    <script src="js/config.js"></script>
      
     <noscript>
         <link rel="stylesheet" href="{{ STATICURL }}/theme/css/skel-noscript.css" />
