--- a/theme/static/css/style-mobile.css
+++ b/theme/static/css/style-mobile.css
@@ -220,7 +220,7 @@
 				position: absolute;
 				left: 15px;
 				top: 6px;
-				background: url('./images/mobileUI-site-nav-opener-bg.svg') 8px 14px no-repeat;
+				background: url('images/mobileUI-site-nav-opener-bg.svg') 8px 14px no-repeat;
 				opacity: 0.5;
 			}
 
