--- a/theme/templates/base.html
+++ b/theme/templates/base.html
@@ -41,6 +41,8 @@ Free for personal and commercial use under the CCA 3.0 license (html5up.net/lice
     <meta name="google-site-verification" content="aDPLnwleWQc6nHK2vIMKXY5kUBDHFUPNJ75QcdcdEss" />
     <meta name="msvalidate.01" content="79DE55785B481065302BA20C0A64D33F" />
 
+    {% block extrahead %}{% endblock extrahead %}
+
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
     <meta name="description" content="" />
     <meta name="keywords" content="" />
