--- a/theme/templates/sidebar.html
+++ b/theme/templates/sidebar.html
@@ -57,7 +57,7 @@
                                                     <header>
                                                         <h2>Donate</h2>
                                                     </header>
-                                                <p>If you found this useful, please consider 
+                                                <p>If you found something useful, please consider 
                                                 supporting the author <a href="https://www.gittip.com/mfitzp/">via Gittip</a>.
                                                 </p>
                                                 </section>
