--- a/theme/templates/base.html
+++ b/theme/templates/base.html
@@ -1,256 +1,29 @@
-<!DOCTYPE HTML>
-<!--
-Escape Velocity 2.5 by HTML5 UP
-html5up.net | @n33co
-Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
-<html>
+<!doctype html>
+<!--[if lt IE 7]><html class="no-js lt-ie9 lt-ie8 lt-ie7" lang="en"> <![endif]-->
+<!--[if (IE 7)&!(IEMobile)]><html class="no-js lt-ie9 lt-ie8" lang="en"><![endif]-->
+<!--[if (IE 8)&!(IEMobile)]><html class="no-js lt-ie9" lang="en"><![endif]-->
+<!--[if gt IE 8]><!--> <html class="no-js" lang="en"><!--<![endif]-->
 <head>
-    {% block head %}
-    <title>{% block title %}{{ SITENAME }}{% endblock title %}</title>
-    <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-    <meta charset="utf-8" />
-    {% if FEED_ALL_ATOM %}
-    <link href="{{ FEED_DOMAIN }}/{{ FEED_ALL_ATOM }}" type="application/atom+xml" rel="alternate" title="{{ SITENAME }} Full Atom Feed" />
-    {% endif %}
-    {% if FEED_ALL_RSS %}
-    <link href="{{ FEED_DOMAIN }}/{{ FEED_ALL_RSS }}" type="application/rss+xml" rel="alternate" title="{{ SITENAME }} Full RSS Feed" />
-    {% endif %}
-    {% if FEED_ATOM %}
-    <link href="{{ FEED_DOMAIN }}/{{ FEED_ATOM }}" type="application/atom+xml" rel="alternate" title="{{ SITENAME }} Atom Feed" />
-    {% endif %}
-    {% if FEED_RSS %}
-    <link href="{{ FEED_DOMAIN }}/{{ FEED_RSS }}" type="application/rss+xml" rel="alternate" title="{{ SITENAME }} RSS Feed" />
-    {% endif %}
-    {% if CATEGORY_FEED_ATOM and category %}
-    <link href="{{ FEED_DOMAIN }}/{{ CATEGORY_FEED_ATOM|format(category.slug) }}" type="application/atom+xml" rel="alternate" title="{{ SITENAME }} Categories Atom Feed" />
-    {% endif %}
-    {% if CATEGORY_FEED_RSS and category %}
-    <link href="{{ FEED_DOMAIN }}/{{ CATEGORY_FEED_RSS|format(category.slug) }}" type="application/rss+xml" rel="alternate" title="{{ SITENAME }} Categories RSS Feed" />
-    {% endif %}
-    {% if TAG_FEED_ATOM and tag %}
-    <link href="{{ FEED_DOMAIN }}/{{ TAG_FEED_ATOM|format(tag.slug) }}" type="application/atom+xml" rel="alternate" title="{{ SITENAME }} Tags Atom Feed" />
-    {% endif %}
-    {% if TAG_FEED_RSS and tag %}
-    <link href="{{ FEED_DOMAIN }}/{{ TAG_FEED_RSS|format(tag.slug) }}" type="application/rss+xml" rel="alternate" title="{{ SITENAME }} Tags RSS Feed" />
-    {% endif %}
-
-    <meta name="google-site-verification" content="Ogw6ZN_S7dzUc9huqkiLOeI_BH8F__4Ft8pNXQVU1Cw" />
-    <meta name="google-site-verification" content="tnbPDWRORDk2SjXzRhyh5HOarf2hDojT07FQS2zcMUY" />
-    <meta name="google-site-verification" content="2DFeXMiIAIVr20q8LLteYxffew35Pp89MXa7Hyy0_IM" />
-    <meta name="google-site-verification" content="aDPLnwleWQc6nHK2vIMKXY5kUBDHFUPNJ75QcdcdEss" />
-    <meta name="msvalidate.01" content="79DE55785B481065302BA20C0A64D33F" />
-
-    {% block extrahead %}{% endblock extrahead %}
-
-    <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-    <meta name="description" content="" />
-    <meta name="keywords" content="" />
-    <link href="http://fonts.googleapis.com/css?family=Source+Sans+Pro:400,400italic,700,900" rel="stylesheet" />    
-
-    <script src="{{ STATICURL }}/theme/js/jquery.min.js"></script>
-    <script src="{{ STATICURL }}/theme/js/jquery.dropotron.min.js"></script>
-
-    <!--[if lte IE 8]><script src="{{ STATICURL }}/theme/js/html5shiv.js"></script><link rel="stylesheet" href="{{ STATICURL }}/theme/css/ie8.css" /><![endif]-->
-    <script>
-        /*
-            Escape Velocity 2.5 by HTML5 UP
-            html5up.net | @n33co
-            Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
-        */
-
-        window._skel_config = {
-            preset: 'standard',
-            prefix: '{{ STATICURL }}/theme/css/style',
-            resetCSS: true,
-            breakpoints: {
-                '1000px': {
-                    grid: {
-                        gutters: 20
-                    }
-                }
-            }
-        };
-
-        window._skel_panels_config = {
-            preset: 'standard',
-        };
-
-        jQuery(function() {
-
-            jQuery.fn.n33_formerize=function(){var _fakes=new Array(),_form = jQuery(this);_form.find('input[type=text],textarea').each(function() { var e = jQuery(this); if (e.val() == '' || e.val() == e.attr('placeholder')) { e.addClass('formerize-placeholder'); e.val(e.attr('placeholder')); } }).blur(function() { var e = jQuery(this); if (e.attr('name').match(/_fakeformerizefield$/)) return; if (e.val() == '') { e.addClass('formerize-placeholder'); e.val(e.attr('placeholder')); } }).focus(function() { var e = jQuery(this); if (e.attr('name').match(/_fakeformerizefield$/)) return; if (e.val() == e.attr('placeholder')) { e.removeClass('formerize-placeholder'); e.val(''); } }); _form.find('input[type=password]').each(function() { var e = jQuery(this); var x = jQuery(jQuery('<div>').append(e.clone()).remove().html().replace(/type="password"/i, 'type="text"').replace(/type=password/i, 'type=text')); if (e.attr('id') != '') x.attr('id', e.attr('id') + '_fakeformerizefield'); if (e.attr('name') != '') x.attr('name', e.attr('name') + '_fakeformerizefield'); x.addClass('formerize-placeholder').val(x.attr('placeholder')).insertAfter(e); if (e.val() == '') e.hide(); else x.hide(); e.blur(function(event) { event.preventDefault(); var e = jQuery(this); var x = e.parent().find('input[name=' + e.attr('name') + '_fakeformerizefield]'); if (e.val() == '') { e.hide(); x.show(); } }); x.focus(function(event) { event.preventDefault(); var x = jQuery(this); var e = x.parent().find('input[name=' + x.attr('name').replace('_fakeformerizefield', '') + ']'); x.hide(); e.show().focus(); }); x.keypress(function(event) { event.preventDefault(); x.val(''); }); });  _form.submit(function() { jQuery(this).find('input[type=text],input[type=password],textarea').each(function(event) { var e = jQuery(this); if (e.attr('name').match(/_fakeformerizefield$/)) e.attr('name', ''); if (e.val() == e.attr('placeholder')) { e.removeClass('formerize-placeholder'); e.val(''); } }); }).bind("reset", function(event) { event.preventDefault(); jQuery(this).find('select').val(jQuery('option:first').val()); jQuery(this).find('input,textarea').each(function() { var e = jQuery(this); var x; e.removeClass('formerize-placeholder'); switch (this.type) { case 'submit': case 'reset': break; case 'password': e.val(e.attr('defaultValue')); x = e.parent().find('input[name=' + e.attr('name') + '_fakeformerizefield]'); if (e.val() == '') { e.hide(); x.show(); } else { e.show(); x.hide(); } break; case 'checkbox': case 'radio': e.attr('checked', e.attr('defaultValue')); break; case 'text': case 'textarea': e.val(e.attr('defaultValue')); if (e.val() == '') { e.addClass('formerize-placeholder'); e.val(e.attr('placeholder')); } break; default: e.val(e.attr('defaultValue')); break; } }); window.setTimeout(function() { for (x in _fakes) _fakes[x].trigger('formerize_sync'); }, 10); }); return _form; };
-            jQuery.browser={};(function(){jQuery.browser.msie=false;jQuery.browser.version=0;if(navigator.userAgent.match(/MSIE ([0-9]+)\./)){jQuery.browser.msie=true;jQuery.browser.version=RegExp.$1;}})();
-
-            // Desktop
-                jQuery('#nav > ul').dropotron({ 
-                    offsetY: -20,
-                    offsetX: -1,
-                    mode: 'fade',
-                    noOpenerFade: true,
-                    alignment: 'center',
-                    detach: false
-                });
-
-            // Forms (IE <= 9 only)
-                if (jQuery.browser.msie && jQuery.browser.version <= 9)
-                    jQuery('form').n33_formerize();
-
-        });    
-    </script>
-    <script src="{{ STATICURL }}/theme/js/skel.min.js"></script>
-    <script src="{{ STATICURL }}/theme/js/skel-panels.min.js"></script>
-
-
-    <noscript>
-        <link rel="stylesheet" href="{{ STATICURL }}/theme/css/skel-noscript.css" />
-        <link rel="stylesheet" href="{{ STATICURL }}/theme/css/style.css" />
-        <link rel="stylesheet" href="{{ STATICURL }}/theme/css/style-desktop.css" />
-    </noscript>
-    
-    <link rel="stylesheet" href="{{ STATICURL }}/theme/css/pygment.css" />
-    {% endblock head %}    
+{% include '_head.html' %}
 </head>
-<body class="{% block bodyclass %}{% if page_name == 'index' %}homepage{% endif %}{% endblock %}">
 
-    <!-- Header Wrapper -->
-        <div id="header-wrapper" class="wrapper">
-            <div class="container">
-                <div class="row">
-                    <div class="12u">
-                    
-                        <!-- Header -->
-                            <div id="header">
-                                
-                                <!-- Logo -->
-                                    <div id="logo">
-                                        <h1><a href="{{ SITEURL }}/">{{ SITENAME }} <span style="font-size:0.8em;">MRes</span></a></h1>
-                                        <span class="byline">{{ SITESUBTITLE }}</span>
-                                    </div>
-                                <!-- /Logo -->
-                                
-                                <!-- Nav -->
-                                    <nav id="nav">
-                                        <ul>
-                                            {% for title, link in MENUITEMS %}
-                                                    <li><a href="{{ link }}">{{ title }}</a></li>
-                                            {% endfor %}
-                                            {% if DISPLAY_PAGES_ON_MENU %}
-                                                {% for p in PAGES %}
-                                                    <li{% if p == page %} class="active"{% endif %}><a href="{{ SITEURL }}/{{ p.url }}">{{ p.title }}</a></li>
-                                                {% endfor %}
-                                            {% endif %}                                        
+<body class="home">
 
-                                            {% if DISPLAY_CATEGORIES_ON_MENU %}
-                                            <li>
-                                                <span>Articles</span>
-                                                <ul>
-                                                {% for cat, null in categories %}
-                                                    <li class="{% if cat == category %} active{% endif %}"><a href="{{ SITEURL }}/{{ cat.url }}">{{ cat }} ({{ null|length }})</a></li>
-                                                {% endfor %}
-                                                </ul>
-                                            </li>
-                                            {% endif %}
-                                                
+{% include '_browser-upgrade.html' %}
 
-                                            {% if LINKS %}
-                                            <li>
-                                                <span>Links</span>
-                                                <ul>
-                                                  {% for name, url in LINKS %}
-                                                      <li {% if cat == category %} class="active"{% endif %}><a href="{{ url }}">{{ name }}</a></li>
-                                                  {% endfor %}
-                                              </ul>
-                                            </li>
-                                            {% endif %}
-                                        </ul>
-                                    </nav>
-                                <!-- /Nav -->
+{% include '_navigation.html' %}
+{% block feature_image %}{% endblock %}
 
-                            </div>
-                        <!-- /Header -->
-
-                    </div>
-                </div>
-            </div>
-        </div>
-    <!-- /Header Wrapper -->
-<div class="main-content">
 {% block content %}{% endblock %}
-</div>
-{% block comments %}{% endblock %}
-    <!-- Footer Wrapper -->
-        <div id="footer-wrapper" class="wrapper">
-            <div class="title">Contact</div>
-            <div class="container">
-                <div class="row">
-                    <div class="12u">
 
-                        <!-- Footer -->
-                            <!-- Contacts -->
-                                <section class="footer-two">
-                                    <div class="feature-list feature-list-small">
-                                        <div>
-                                            <div class="row">
-                                                <div class="4u">
-                                                    <section>
-                                                        <h3 class="fa fa-envelope">Mailing Address</h3>
-                                                        <p>
-                                                            {{ ADDRESS }}
-                                                        </p>
-                                                        <p>e: <a href="#">{{ AUTHOR_EMAIL }}</a></p>
-                                                        
-                                                    </section>
-                                                </div>
-                                                <div class="4u">
-                                                    <section>
-                                                        <h3 class="fa fa-comment">Social</h3>
-                                                        <p>
-                                                            
-                                                            {% if SOCIAL %}
-                                                              {% for name, icon, url in SOCIAL %}
-                                                                 {% if loop.index0 % 4 == 0 %}<ul class="social">{% endif %}
-                                                                    <li><a class="fa fa-{{ icon }} solo" href="{{ url }}"> <span>{{ name }}</span></a></li>
-                                                                 {% if loop.index % 4 == 0 %}</ul>{% endif %}
-                                                              {% endfor %}
-                                                            {% endif %}			
-                                                            </ul>						
-                                                        </p>
-                                                    </section>
-                                                </div>
-                                                <div class="4u">
-                                                    <section>
-                                                        <h3 class="fa fa-envelope">Copyright</h3>
-                                                        <p>Everything you see here is <strong>Martin&nbsp;Fitzpatrick&nbsp;&copy;{{ CURRENT_YEAR }}</strong></p>
-                                                        <p>Licensed CC-BY-NC-SA and GPLv3.</p>
-                                                        <p>Design by <a href="http://html5up.net/">HTML5 UP</a>.</p>
-                                                    </section>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </section>
-                            <!-- /Contacts -->
-                        </div></div>
-                        <!-- /Footer -->
-                    
-                    </div>
-                </div>
-            </div>
-        </div>
-    <!-- /Footer Wrapper -->
-   
-    {% if GOOGLE_ANALYTICS %}
-        <script type="text/javascript">
-            var _gaq = _gaq || [];
-            _gaq.push(['_setAccount', '{{ GOOGLE_ANALYTICS }}']);
-            _gaq.push(['_trackPageview']);
-            (function() {
-            var ga = document.createElement('script');
-            ga.type = 'text/javascript'; ga.async = true;
-            ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-            var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-            })();
-        </script>
-    {% endif %}
+{% block pagination %}{% endblock %}
+<div class="footer-wrap">
+  <footer>
+    {% include '_footer.html' %}
+  </footer>
+</div><!-- /.footer-wrap -->
+
+{% include '_scripts.html' %}
+{% block disqus %}{% endblock %}
 </body>
 </html>
