--- a/theme/templates/index.html
+++ b/theme/templates/index.html
@@ -1,208 +1,48 @@
-{% extends "base.html" %}
+{% extends 'base.html' %}
 
-
-{% block content %}
-
+{% block feature_image %}
 {% if page_name == 'index' %}
-    <!-- Intro Wrapper -->
-        <div id="intro-wrapper" class="wrapper wrapper-style1">
-            <div class="title">About</div>
-            <div class="container">
-                <div class="row">
-                    <div class="12u">
-                        
-                        <!-- Intro -->
-                            <section id="intro">
-                            
-<p>I am a final-year PhD student working on the metabolomics of inflammatory diseases.<br />
-On this site you&#8217;ll find details of my publications and software, together with articles
-relating to how to make use of one or the other.<br />
-Everything you see here is licensed <a href="http://creativecommons.org/licenses/by-sa/3.0/"><span class="caps">CC</span>-<span class="caps">BY</span>-<span class="caps">SA</span></a> and <a href="http://www.gnu.org/licenses/gpl.html">GPLv3</a>.</p>
-                            </section>
-                        <!-- /Intro -->
-                        
-                    </div>
-                </div>
-            </div>
-        </div>
-    <!-- /Intro Wrapper -->
-{% endif %}    
-<a name="content"></a>    
-    
-    <!-- Main Wrapper -->
-        <div class="wrapper wrapper-style2">
-            <div class="title">{% if category %}{{ category }}{% else %}{% if tag %}{{ tag }}{% else %}Latest{% endif %}{% endif %}</div>
-            <div class="container">
-                <div class="row">
-                    <div class="12u">
-                        
-                        <!-- Main -->
-                            <div id="main">
-                                
-                                <!-- Features -->
-                                    <section id="features">
-                                        <div class="feature-list article-list">
-                                            <div>
-
-
-    {% for article in articles_page.object_list %}
-    <div class="row">
-    <div class="12u">
-        <section>
-            <h3><a href="{{ SITEURL }}/{{ article.url }}">{{ article.title }}</a></h3>
-            <div class="metadata">Posted {% if article.category %}in <a  href="{{ SITEURL }}/{{ article.category.url }}">{{ article.category|capitalize }}</a>{% endif %} on {{ article.locale_date }} &#8226;
-                   Tagged {% for tag in article.tags %}<a href="{{ SITEURL }}/{{ tag.url }}">{{ tag|capitalize }}</a>{% if not loop.last%}, {% endif %}{% endfor %}
-                </div>
-            <p>{{ article.summary }}</p>
-        </section>
-    </div>
-    </div>
-    {% endfor %}
-
-    <div class="row">
-    <div class="12u">
-    {% if DEFAULT_PAGINATION %}
-        <p class="paginator">
-            {% if articles_page.has_previous() %}
-                {% if articles_page.previous_page_number() == 1 %}
-                    <a href="{{ SITEURL }}/{{ page_name }}.html#content">&laquo;</a>
-                {% else %}
-                    <a href="{{ SITEURL }}/{{ page_name }}{{ articles_page.previous_page_number() }}.html#content">&laquo;</a>
-                {% endif %}
-            {% endif %}
-            Page {{ articles_page.number }} / {{ articles_paginator.num_pages }}
-            {% if articles_page.has_next() %}
-                <a href="{{ SITEURL }}/{{ page_name }}{{ articles_page.next_page_number() }}.html#content">&raquo;</a>
-            {% endif %}
-        </p>
-    {% endif %}
-    </div>
-    </div>
-
-
-
-
-                                            </div>
-                                        </div>
-                                    </section>
-                                <!-- /Features -->
-                                
-                            </div>
-                        <!-- /Main -->
-                        
-                    </div>
-                </div>
-            </div>
-        </div>
-    <!-- /Main Wrapper -->
-
-<!-- Projects Wrapper -->
-
-<div class="wrapper wrapper-style3">
-    <div class="title">Projects</div>
-    <div class="container">
-        <div class="row">
-            <div class="12u">
-                
-                <!-- Highlights -->
-                    <div id="highlights">
-                        <div>
-
-        {% for project in PROJECTS %}
-        {% if loop.index0 % 4 == 0 %}<div class="row">{% endif %}
-                    <div class="3u">
-                        <section class="highlight highlight-one">
-                            <h3><a href="{{ project.url }}">{{ project.title }}</a></h3>
-                            <p>{{ project.description }}</p>
-                        </section>
-                    </div>
-        <!-- /Highlights -->
-        {% if loop.index % 4 == 0 %}</div>{% endif %}
-        {% endfor %}
-                    
-                    </div>
-                </div>
-
-            </div>
-        </div>
-    </div>
-    </div>
-</div>
-<!-- /Projects Wrapper -->
-
-
-
-
-
-
+  <div class="image-wrap">
+  <img src="{{ STATICURL }}/theme/images/home-photo-bw.jpg">
+  </div><!-- /.image-wrap -->
+{% endif %}
 {% endblock %}
 
+{% block content %}
+<div id="main" role="main"> 
+  <div class="article-author-side">
+    {% include '_author-bio.html' %}
+  </div>
+  <div id="index">
+    <h3><a href="{{ SITEURL }}/articles/">Recent articles</a></h3>
+    {% for article in articles_page.object_list %} 
+    <article>
+      {% if article.link %}
+        <h2 class="link-article"><a href="{{ article.link }}" title="{{ article.title|striptags }}">{{ article.title }}</a> <a href="{{ article.link }}" target="_blank" title="{{ article.title|striptags }}"><i class="fa fa-link"></i></h2>
+      {% else %}
+        <h2><a href="{{ SITEURL }}/{{ article.url }}" title="{{ article.title|striptags }}">{{ article.title }}</a></h2>
+        <p>{{ article.summary }}</p>
+      {% endif %}
+    </article>
+    {% endfor %}
 
-
-{% block content_old %}
-
-
-
-<div class="row" style="background-color:#fff">
-<div class="12u">
-    <header class="major">
-        <h2>Latest</h2>
-    </header>
-
-        <section>
-            <ul class="dates">
-            {% for article in articles_page.object_list %}
-                <li>
-                    <span class="date">{{ article.date|strftime('%b') }} <strong>{{ article.date|strftime('%d') }}</strong></span>
-                    <h3><a href="{{ article.url }}">{{ article.title }}</a></h3>
-                    <p>{{ article.summary }}</p>
-                </li>
-            {% endfor %}
-            </ul>
-        </section>
-    </div>
-
-</div>
-
-<div class="row">
-<div class="12u">
-{% if DEFAULT_PAGINATION %}
-    <p class="paginator">
+    {% if DEFAULT_PAGINATION %}
+        <p class="paginator">
         {% if articles_page.has_previous() %}
-            {% if articles_page.previous_page_number() == 1 %}
-                <a href="{{ SITEURL }}/{{ page_name }}.html">&laquo;</a>
-            {% else %}
-                <a href="{{ SITEURL }}/{{ page_name }}{{ articles_page.previous_page_number() }}.html">&laquo;</a>
-            {% endif %}
+        {% if articles_page.previous_page_number() == 1 %}
+        <a href="{{ SITEURL }}/{{ page_name }}.html#content">&laquo;</a>
+        {% else %}
+        <a href="{{ SITEURL }}/{{ page_name }}{{ articles_page.previous_page_number() }}.html#content">&laquo;</a>
+        {% endif %}
         {% endif %}
         Page {{ articles_page.number }} / {{ articles_paginator.num_pages }}
         {% if articles_page.has_next() %}
-            <a href="{{ SITEURL }}/{{ page_name }}{{ articles_page.next_page_number() }}.html">&raquo;</a>
+        <a href="{{ SITEURL }}/{{ page_name }}{{ articles_page.next_page_number() }}.html#content">&raquo;</a>
         {% endif %}
-    </p>
-{% endif %}
-</div></div>
-
-<div class="row">
-<div class="12u">
-    <header class="major">
-        <h2>Projects</h2>
-    </header>
-    <section>
-    {% for project in PROJECTS %}
-
-        {% if loop.index0 % 4 == 0 %}<div class="row">{% endif %}
-            <div class="3u">
-                <section>
-                    <a href="{{ project.url }}">{{ project.title }}</a><br />
-                    {{ project.description }}
-                </section>
-            </div>
-        {% if loop.index % 4 == 0 %}</div>{% endif %}
-    {% endfor %}
-
-</section>
-
-</div>
-</div>
+        </p>
+    {% endif %}
+    
+    
+  </div><!-- /#index -->
+</div><!-- /#main -->
 {% endblock %}
