--- a/theme/templates/_navigation.html
+++ b/theme/templates/_navigation.html
@@ -1,6 +1,6 @@
 <div class="navigation-wrapper">
     <div class="site-name">
-        <a href="{{ SITEURL }}">{{ SITENAME }}</a>
+        <a href="{{ SITEURL }}">{{ SITENAME }} <span class="hilite">MRes</span></a>
     </div><!-- /.site-name -->
     <div class="top-navigation">
         <nav role="navigation" id="site-nav" class="nav">
@@ -19,7 +19,7 @@
             {% if DISPLAY_CATEGORIES_ON_MENU %}
             <ul>
                 {% for cat, null in categories %}
-                <li class="{% if cat == category %} active{% endif %}"><a href="{{ SITEURL }}/{{ cat.url }}">{{ cat }} ({{ null|length }})</a></li>
+                <li class="{% if cat == category %} active{% endif %}"><a href="{{ SITEURL }}/{{ cat.url }}">{{ cat }} <span class="hilite">({{ null|length }})</span></a></li>
                 {% endfor %}
             </ul>
             {% endif %}
