--- a/theme/templates/_scripts.html
+++ b/theme/templates/_scripts.html
@@ -1,6 +1,6 @@
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-<script>window.jQuery || document.write('<script src="{{ SITEURL }}/assets/js/vendor/jquery-1.9.1.min.js"><\/script>')</script>
-<script src="{{ SITEURL }}/assets/js/scripts.min.js"></script>
+<script>window.jQuery || document.write('<script src="{{ STATICURL }}/theme/js/vendor/jquery-1.9.1.min.js"><\/script>')</script>
+<script src="{{ STATICURL }}/theme/js/scripts.min.js"></script>
 {% if site and site.owner.google.analytics %}
 <!-- Asynchronous Google Analytics snippet -->
 <script>
