--- a/theme/templates/_head.html
+++ b/theme/templates/_head.html
@@ -20,7 +20,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <!-- For all browsers -->
-<link rel="stylesheet" href="{{ STATICURL }}/theme/css/main.css">
+<link rel="stylesheet" href="{{ SITEURL }}/theme/css/main.css">
 
 <meta http-equiv="cleartype" content="on">
 
