--- a/theme/templates/article.html
+++ b/theme/templates/article.html
@@ -20,7 +20,6 @@
  {% endif %} 
 {% endblock %}
 
-
 {% block content %}
 <div id="main" role="main">
   <div class="article-author-side">
@@ -41,7 +40,10 @@
         <div class="article-author-bottom">
           {% include '_author-bio.html' %}
         </div>
-        <p class="byline"><strong>{{ article.title }}</strong> was published in <a href="{{ SITEURL }}/category/{{ article.category }}.html">{{ article.category }}</a> on <time datetime="{{ article.date.isoformat() }}">{{ article.date|strftime("%B %d, %Y") }}</time></p>
+        <p class="byline">
+            <strong>{{ article.title }}</strong> was published in <a href="{{ SITEURL }}/category/{{ article.category }}.html">{{ article.category }}</a> on <time datetime="{{ article.date.isoformat() }}">{{ article.date|strftime("%B %d, %Y") }}</time>
+            and tagged {% for tag in article.tags %}<a href="{{ SITEURL }}/{{ tag.url }}">{{ tag }}</a>{% if not loop.last%}, {% endif %}{% endfor %}    
+        </p>
       </footer>
     </div><!-- /.article-wrap -->
   {% if DISQUS_SITENAME %}
