--- a/theme/templates/base.html
+++ b/theme/templates/base.html
@@ -14,7 +14,14 @@
 {% include '_navigation.html' %}
 {% block feature_image %}{% endblock %}
 
+<div id="main" role="main">
+  <div class="article-author-side">
+    {% include '_author-bio.html' %}
+  </div>
 {% block content %}{% endblock %}
+</div><!-- /#main -->
+
+
 
 {% block pagination %}{% endblock %}
 <div class="footer-wrap">
