--- a/theme/templates/_scripts.html
+++ b/theme/templates/_scripts.html
@@ -1,14 +1,14 @@
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 <script>window.jQuery || document.write('<script src="{{ STATICURL }}/theme/js/vendor/jquery-1.9.1.min.js"><\/script>')</script>
 <script src="{{ STATICURL }}/theme/js/scripts.min.js"></script>
-{% if site and site.owner.google.analytics %}
+{% if GOOGLE_ANALYTICS %}
 <!-- Asynchronous Google Analytics snippet -->
 <script>
   var _gaq = _gaq || [];
   var pluginUrl = 
  '//www.google-analytics.com/plugins/ga/inpage_linkid.js';
   _gaq.push(['_require', 'inpage_linkid', pluginUrl]);
-  _gaq.push(['_setAccount', '{{ site.owner.google.analytics }}']);
+  _gaq.push(['_setAccount', '{{ GOOGLE_ANALYTICS }}']);
   _gaq.push(['_trackPageview']);
 
   (function() {
