Add adsense to SMS page; traffic is getting bit high

--- a/theme/templates/base.html
+++ b/theme/templates/base.html
@@ -14,6 +14,23 @@
 {% include '_navigation.html' %}
 {% block feature_image %}{% endblock %}
 
+{% block ad_top %}
+{% if (page and 'top' in page.ads) or (article and 'top' in article.ads) %}
+<div style="width:540px; margin:auto;">
+<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- Leaderboard -->
+<ins class="adsbygoogle"
+     style="display:inline-block;width:728px;height:90px"
+     data-ad-client="ca-pub-3287067876809234"
+     data-ad-slot="4700067825"></ins>
+<script>
+(adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+</div>
+{% endif %}
+
+{% endblock %}
+
 <div id="main" role="main">
   <div class="article-author-side">
     {% include '_author-bio.html' %}
@@ -21,14 +38,30 @@
 {% block content %}{% endblock %}
 </div><!-- /#main -->
 
-
-
 {% block pagination %}{% endblock %}
 <div class="footer-wrap">
   <footer>
     {% include '_footer.html' %}
   </footer>
 </div><!-- /.footer-wrap -->
+
+
+{% block ad_bottom %}
+{% if (page and 'bottom' in page.ads) or (article and 'bottom' in article.ads) %}
+<div style="width:540px; margin:auto;">
+<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- Leaderboard (bottom) -->
+<ins class="adsbygoogle"
+     style="display:inline-block;width:728px;height:90px"
+     data-ad-client="ca-pub-3287067876809234"
+     data-ad-slot="1607000620"></ins>
+<script>
+(adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+</div>
+{% endif %}
+{% endblock %}
+
 
 {% include '_scripts.html' %}
 {% block disqus %}{% endblock %}
