--- a/theme/static/css/main.css
+++ b/theme/static/css/main.css
@@ -182,47 +182,47 @@ b, i, strong, em, blockquote, p, q, span, figure, img, h1, h2, header, input, a 
     transition: all 0.2s ease;
 }
 h1, h2, h3, h4, h5, h6 {
-    font-family: "PT Sans Narrow", sans-serif;
+    /* font-family: "PT Sans Narrow", sans-serif; */
 }
 h1 {
     font-size: 32px;
     font-size: 2rem;
-    line-height: 0.8125;
+    line-height: 1.1;
     margin-bottom: 26px;
     margin-bottom: 1.625rem;
 }
 h2 {
     font-size: 28px;
     font-size: 1.75rem;
-    line-height: 0.9286;
+    line-height: 1.1;
     margin-bottom: 26px;
     margin-bottom: 1.625rem;
 }
 h3 {
     font-size: 24px;
     font-size: 1.5rem;
-    line-height: 1.0833;
+    line-height: 1.1;
     margin-bottom: 26px;
     margin-bottom: 1.625rem;
 }
 h4 {
     font-size: 18px;
     font-size: 1.125rem;
-    line-height: 1.4444;
+    line-height: 1.1;
     margin-bottom: 26px;
     margin-bottom: 1.625rem;
 }
 h5 {
     font-size: 16px;
     font-size: 1rem;
-    line-height: 1.625;
+    line-height: 1.1;
     margin-bottom: 26px;
     margin-bottom: 1.625rem;
 }
 h6 {
     font-size: 14px;
     font-size: 0.875rem;
-    line-height: 1.8571;
+    line-height: 1.1;
     margin-bottom: 26px;
     margin-bottom: 1.625rem;
 }
@@ -294,8 +294,8 @@ figcaption {
 blockquote {
     margin-left: -28px;
     padding-left: 20px;
-    border-left: 8px solid #333332;
-    font-family: "PT Serif", serif;
+    border-left: 8px solid #da553b;
+    /* font-family: "PT Serif", serif; */
     font-style: italic;
 }
 .footnotes ol, .footnotes li, .footnotes p {
@@ -305,6 +305,7 @@ blockquote {
 }
 p {
     margin: 0 0 1.625rem;
+    line-height: 1.7;
 }
 tt, code, kbd, samp, pre {
     font-family: Monaco, "Courier New", "DejaVu Sans Mono", "Bitstream Vera Sans Mono", monospace;
@@ -886,8 +887,9 @@ hr {
     padding: 0;
     height: 1px;
     border: 0;
-    border-top: 1px solid #ccc;
+    border-top: 1px solid #da553b;
     border-bottom: 1px solid #fff;
+
 }
 figure {
     margin-bottom: 1.625rem;
@@ -952,7 +954,7 @@ svg:not(:root) {
     padding: 8px 20px;
     font-size: 14px;
     font-size: 0.875rem;
-    font-family: "PT Sans Narrow", sans-serif;
+    /* font-family: "PT Sans Narrow", sans-serif; */
     font-weight: 700;
     background-color: #111;
     color: #fff;
@@ -1063,7 +1065,7 @@ label, input, button, select, textarea {
     *vertical-align: middle;
 }
 input, button, select, textarea {
-    font-family: "PT Serif", serif;
+    /* font-family: "PT Serif", serif; */
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
     -ms-box-sizing: border-box;
@@ -1253,8 +1255,8 @@ body {
     margin: 0 auto;
     width: 100%;
     padding: 2em 0 1em;
-    font-family: "PT Sans Narrow", sans-serif;
-    font-weight: 700;
+    font-family: "PT Serif", sans-serif;
+    font-weight: 600;
     text-transform: uppercase;
     *zoom: 1;
 }
@@ -1275,7 +1277,7 @@ body {
     margin-bottom: 1em;
     float: none;
     display: block;
-    font-size: 24px;
+    font-size: 32px;
     font-size: 1.5rem;
 }
 @media only screen and (min-width: 37.5em) {
@@ -1285,8 +1287,8 @@ body {
     width: 16.66667%;
     margin-left: 4.16667%;
     margin-right: 4.16667%;
-    font-size: 16px;
-    font-size: 1rem;
+    font-size: 19px;
+    font-size: 0.9rem;
 }
 }@media only screen and (min-width: 86.375em) {
     .site-name {
@@ -1327,8 +1329,8 @@ body {
     list-style-type: none;
     border-bottom: 1px solid #ddd;
     border-bottom: 1px solid fade(#111,  10);
-    font-size: 16px;
-    font-size: 1rem;
+    font-size: 19px;    
+    font-size: 0.9rem;
 }
 .top-navigation li:last-child {
     border-bottom: 0 solid transparent;
@@ -1336,7 +1338,7 @@ body {
 @media only screen and (min-width: 37.5em) {
     .top-navigation li {
     display: inline;
-    margin-right: 25px;
+    margin-right: 15px;
     white-space: nowrap;
     border-bottom: 0 solid transparent;
 }
@@ -1537,26 +1539,8 @@ body {
     display: inline;
     float: left;
     width: 37.5%}
-}#index h3 {
-    margin: 0;
-    padding-bottom: .5em;
-    font-size: 28px;
-    font-size: 1.75rem;
-    border-bottom: 1px solid #c4c4c4;
 }
-#index article h2 {
-    margin-bottom: 4px;
-    font-size: 20px;
-    font-size: 1.25rem;
-}
-#index article h2.link-post {
-    margin-bottom: 26px;
-    margin-bottom: 1.625rem;
-}
-#index article p {
-    font-size: 14px;
-    font-size: 0.875rem;
-}
+
 #index article p+p {
     text-indent: 0;
 }
@@ -1757,7 +1741,7 @@ body {
     display: block;
     margin: 0 0 1px 0;
     padding: 0;
-    font-family: "PT Sans Narrow", sans-serif;
+    /* font-family: "PT Sans Narrow", sans-serif; */
     list-style-type: none;
 }
 .toc li:last-child {
@@ -1845,7 +1829,7 @@ body {
     width: 19%;
     margin-bottom: 1%}
 .holder {
-    font-family: "PT Sans Narrow", sans-serif;
+    /* font-family: "PT Sans Narrow", sans-serif; */
 }
 .holder a {
     cursor: pointer;
@@ -2023,3 +2007,7 @@ p a, .hilite {
  text-decoration: none !important;
 }
 
+h3 small {
+    color: #da553b !important; 
+    font-size: 0.6em;
+}
