--- a/theme/static/css/main.css
+++ b/theme/static/css/main.css
@@ -1602,6 +1602,7 @@ body {
 .byline {
     clear: both;
     font-size: 80%}
+
 .article-author-side h3, .article-author-bottom h3 {
     margin-bottom: 0;
 }
@@ -1623,18 +1624,9 @@ body {
     color: #111;
 }
 .author-social:hover {
-    -webkit-transform: scale(1.1);
-    -moz-transform: scale(1.1);
-    -ms-transform: scale(1.1);
-    -o-transform: scale(1.1);
-    transform: scale(1.1);
+    color: #da553b;
 }
 .author-social:active {
-    -webkit-transform: translate(0,  2px);
-    -moz-transform: translate(0,  2px);
-    -ms-transform: translate(0,  2px);
-    -o-transform: translate(0,  2px);
-    transform: translate(0,  2px);
 }
 .author-social .fa {
     margin-right: 5px;
@@ -1677,6 +1669,7 @@ body {
     display: inline;
     float: left;
     width: 12.5%;
+    padding-top:0.5rem;    
     margin-left: 16.66667%}
 }.article-author-bottom {
     margin-bottom: 1em;
