--- a/theme/templates/index.html
+++ b/theme/templates/index.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block feature_image %}
-{% if page_name == '_index' %}
+{% if page_name == 'index' %}
   <div class="image-wrap">
   <img src="{{ STATICURL }}/theme/images/home-photo-bw.jpg">
   </div><!-- /.image-wrap -->
