--- a/theme/templates/_open-graph.html
+++ b/theme/templates/_open-graph.html
@@ -18,6 +18,6 @@
 {% if article %}
     <meta property="og:title" content="{{ article.title|striptags }}">
     <meta property="og:description" content="{{ article.summary|striptags }}">
-    <meta property="og:url" content="{{ SITEURL }}{{ article.url }}">
+    <meta property="og:url" content="{{ SITEURL }}/{{ article.url }}">
 {% endif %}
 <meta property="og:site_name" content="{{ SITENAME }}">
