--- a/theme/templates/index.html
+++ b/theme/templates/index.html
@@ -14,10 +14,18 @@
     {% for article in articles_page.object_list %} 
     <article>
     {% if article.link %}
-        <h3 class="link-article"><a href="{{ article.link }}" title="{{ article.title|striptags }}">{{ article.title }} {% if article.type and article.type == 'publication' %}<i class="fa fa-book"></i>{% endif %}</a> <a href="{{ article.link }}" target="_blank" title="{{ article.title|striptags }}"><i class="fa fa-link"></i></a></h3>
+        <h3 class="link-article"><a href="{{ article.link }}" title="{{ article.title|striptags }}">{{ article.title }} 
+        {% if article.type and article.type == 'publication' %}<i class="fa fa-book" title="Publication"></i>{% endif %}
+        {% if article.type and article.type == 'presentation' %}<i class="fa fa-users" title="Presentation"></i>{% endif %}
+        {% if article.type and article.type == 'poster' %}<i class="fa fa-file-image-o" title="Poster"></i>{% endif %}
+        </a> <a href="{{ article.link }}" target="_blank" title="{{ article.title|striptags }}"><i class="fa fa-link"></i></a></h3>
 
-         {% if article.type and article.type == 'publication' %}
-            <p class="byline"><strong>{% for author in article.authors %}{{ author }}{% if not loop.last %}, {% endif %}{% endfor %}</strong>. Published in <a href="{{ article.link }}">{{ article.journal }}</a> on <time datetime="{{ article.date.isoformat() }}">{{ article.date|strftime("%B %d, %Y") }}</time>
+         {% if article.type and article.type in ['publication', 'poster', 'presentation'] %}
+            <p class="byline"><strong>{% for author in article.authors %}{{ author }}{% if not loop.last %}, {% endif %}{% endfor %}</strong>. 
+            
+            {% if article.type == 'publication' %}Published in <a href="{{ article.link }}">{{ article.journal }}</a>{% endif %}
+            {% if article.type in ['presentation', 'poster'] %}Presented at <a href="{{ article.link }}">{{ article.venue }}</a>{% endif %}
+                on <time datetime="{{ article.date.isoformat() }}">{{ article.date|strftime("%B %d, %Y") }}</time>
             {% if article.doi %}<a href="http://dx.doi.org/{{ article.doi }}">doi:{{ article.doi }}</a> {% endif %}
             {% if article.pmid %}<a href="http://www.ncbi.nlm.nih.gov/pubmed/{{ article.pmid }}">pmid:{{ article.pmid }}</a> {% endif %}
             {% if article.isbn %}isbn:{{ article.isbn }} {% endif %}</p>
